syntax = "proto3";

package ru.ners.service;

import "google/protobuf/empty.proto";

message SaveUserRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message GetUserRequest {
  string username = 1;
}

message GetUserResponse {
  int64 id = 1;
  string email = 2;
  string username = 3;
  string password = 4;
}

message GetUsersResponse {
  repeated GetUserResponse users = 1;
}

service UserService {
  rpc saveUser(SaveUserRequest) returns (google.protobuf.Empty);
  rpc getUser(GetUserRequest) returns (GetUserResponse);
  rpc getUsers(google.protobuf.Empty) returns (GetUsersResponse);
}